--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
 <h2>Olympic games app</h2>
 <hr />
+<div *ngFor="let olympic of olympics$ | async">
+  {{ olympic.country }}
+</div>
 <p>{{ (olympics$ | async)?.length }} data loaded</p>
