--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -1,3 +1,3 @@
-<div class="chart-container">
-  <canvas id="MyChart">{{ chart }}</canvas>
+<div class="chart-container" *ngIf="olympics$ | async as olympics">
+  <canvas id="MyChart">{{ createChart(olympics) }}</canvas>
 </div>
