--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,3 @@
 <h2>Olympic games app</h2>
 <hr />
-<div class="chart-container" *ngIf="olympics$ | async as olympics">
-  <canvas id="MyChart">{{ createChart(olympics) }}</canvas>
-</div>
+<canvas id="MyChart"></canvas>
