Started Numbers of...

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
-<h2>Olympic games app</h2>
-<hr />
+<h2>Medals per countries</h2>
+<div>
+  <div>Numbers of JOs</div>
+  <div>Number of Countries: {{ (olympics$ | async)?.length }}</div>
+</div>
 <canvas id="MyChart"></canvas>
