Page 1 is OK (need to be beautiful now)

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <h2>Medals per countries</h2>
 <div>
-  <div>Numbers of JOs</div>
+  <div>Numbers of JOs: {{ countUniqueGames(olympics$ | async) }}</div>
   <div>Number of Countries: {{ (olympics$ | async)?.length }}</div>
 </div>
 <canvas id="MyChart"></canvas>
