--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,6 +5,21 @@ h2 {
   background-color: darkcyan;
   color: white;
   padding: 10px;
+  border-radius: 10px;
+  font-family: sans-serif;
+  margin-bottom: 20px;
+}
+
+.specificInfos {
+  width: fit-content;
+  margin: auto;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  font-family: sans-serif;
+  border-color: darkcyan;
+  border-style: solid;
+  border-width: 3px;
 }
 
 #mainInfos {
