--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -9,11 +9,11 @@
     </div>
     <div class="specificInfos">
       Total number medals:<br />
-      <strong>{{ "---" }}</strong>
+      <strong>{{ totalMedals }}</strong>
     </div>
     <div class="specificInfos">
       Total number athletes:<br />
-      <strong>{{ "---" }}</strong>
+      <strong>{{ totalAthletes }}</strong>
     </div>
   </div>
 </div>
