before trying ng build

--- a/src/app/pages/country/country.component.scss
+++ b/src/app/pages/country/country.component.scss
@@ -14,12 +14,13 @@ h2 {
   width: fit-content;
   margin: auto;
   text-align: center;
-  padding: 10px;
+  padding: 7px;
   border-radius: 10px;
   font-family: sans-serif;
   border-color: darkcyan;
   border-style: solid;
   border-width: 3px;
+  margin-bottom: 10px;
 }
 
 #mainInfos {
