--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -20,3 +20,25 @@
 <div class="chartContainer">
   <canvas id="MyChart"></canvas>
 </div>
+<div *ngIf="olympics$ | async as olympics">
+  <div *ngIf="olympics[countryId] as olympic">
+    <table>
+      <thead>
+        <tr>
+          <th>Year</th>
+          <th>City</th>
+          <th>Medals</th>
+          <th>Athletes</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let og of olympic.participations">
+          <th>{{ og.year }}</th>
+          <th>{{ og.city }}</th>
+          <th>{{ og.medalsCount }}</th>
+          <th>{{ og.athleteCount }}</th>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
