--- a/src/app/pages/country/country.component.scss
+++ b/src/app/pages/country/country.component.scss
@@ -28,3 +28,24 @@ h2 {
   display: flex;
   justify-content: space-evenly;
 }
+
+table,
+th,
+td {
+  font-family: sans-serif;
+  margin: auto;
+  border-style: solid;
+  border-width: 2px;
+  border-collapse: collapse;
+  text-align: left;
+  font-style: normal;
+  padding: 8px;
+}
+
+table thead th {
+  text-align: center;
+  font-style: italic;
+  color: white;
+  background-color: darkcyan;
+  border-color: black;
+}
