First version to be shown

--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -24,6 +24,9 @@
 <div *ngIf="olympics$ | async as olympics">
   <div *ngIf="olympics[countryId] as olympic">
     <table>
+      <caption>
+        Details
+      </caption>
       <thead>
         <tr>
           <th>Year</th>
