--- a/src/app/pages/country/country.component.scss
+++ b/src/app/pages/country/country.component.scss
@@ -49,3 +49,9 @@ table thead th {
   background-color: darkcyan;
   border-color: black;
 }
+
+table caption {
+  font-size: large;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
