Deported some functions to service

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div id="mainInfos">
   <div class="specificInfos">
     Numbers of JOs:<br />
-    <strong>{{ countUniqueGames(olympics$ | async) }}</strong>
+    <strong>{{ mNumberOfGames }}</strong>
   </div>
   <div class="specificInfos">
     Number of Countries:<br />
