last changes (go back / data on startup)

--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -19,5 +19,5 @@
   <canvas id="MyChart"></canvas>
 </div>
 <div class="backHome">
-  <button (click)="goBackHome()">Home</button>
+  <a routerLink="">Go back</a>
 </div>
